--- a/vignettes/analysis_ref.bib
+++ b/vignettes/analysis_ref.bib
@@ -451,3 +451,13 @@
   volume = {1036},
   pages = {66-72},
   doi = {10.1016/j.aca.2018.08.002}}
+  
+@article{r2mr2c,
+  title = {A general and simple method for obtaining R2 from generalized linear mixed-effects models},
+  author = {Nakagawa, Shinichi and Schielzeth, Holger},
+  journal = {Methods in Ecology and Evolution},
+  year = {2012},
+  volume = {4},
+  number = {2},
+  pages = {133-142},
+  doi = {10.1111/j.2041-210x.2012.00261.x}}
