--- a/vignettes/malbacR_vignette_expanded_unfiltered.Rmd
+++ b/vignettes/malbacR_vignette_expanded_unfiltered.Rmd
@@ -279,12 +279,12 @@ RUV-random is ran on log2 transformed data that has not been normalized.
 mix_ruv <- bc_ruvRandom(omicsData = pmart_mix_log, nc_cname = "tag",nc_val = "IS", k = 3)
 ```
 
-The other method that uses information found in `e_meta` is NOMIS which uses the function `bc_nomis` and takes the parameters `omicsData`, `is_cname` (column in `e_meta` which has the information on internal standards), `is_val` (the value within `is_cname` that is the value for internal standards) and `num_pc` (number of principal components for NOMIS to consider).
+The other method that uses information found in `e_meta` is NOMIS which uses the function `bc_nomis` and takes the parameters `omicsData`, `is_cname` (column in `e_meta` which has the information on internal standards), and `is_val` (the value within `is_cname` that is the value for internal standards)
 
 NOMIS is ran on raw abundance values. As there no missing values, data does not need to be imputed. However, if there were missing values, a similar procedure as to what was done with SERRF with the amide data, would be required.
 
 ```{r}
-mix_nomis_abundance <- bc_nomis(omicsData = pmart_mix, is_cname = "tag", is_val = "IS", num_pc = 2)
+mix_nomis_abundance <- bc_nomis(omicsData = pmart_mix, is_cname = "tag", is_val = "IS")
 mix_nomis <- edata_transform(omicsData = mix_nomis_abundance, data_scale = "log2")
 ```
 
